--- a/inferless-runtime-config.yaml
+++ b/inferless-runtime-config.yaml
@@ -5,4 +5,5 @@ build:
     - "accelerate==0.30.1"
     - "transformers==4.41.0"
     - "torch==2.3.0"
-    - "huggingface-hub==0.25.2"
+    - "hf-transfer==0.1.9"
+    - "huggingface-hub==0.29.1"
